# jansson-test

./: .gitignore  CMakeLists.txt  Makefile.am  build.sh  configure.ac  main.c  sample.json
.github/workflows/: autotools.yml  cmake.yml
test-overwrite/: CMakeLists.txt  Makefile.am  configure.ac  main.c
test-read/: CMakeLists.txt  Makefile.am  configure.ac  main.c
test-write/: CMakeLists.txt  Makefile.am  configure.ac  main.c
